# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  maze_output.txt  mazegen-1.0.0-py3-none-any.whl  note.txt  oogabooga.txt  pyproject.toml  saved_for_explanation.txt
maze/: __init__.py  __main__.py  config_parser.py  display.py  generator.py  solver.py  writer.py
mazegen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
