[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generator and solver with emoji display"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "42 Student", email = "student@42.fr"}
]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.scripts]
maze-run = "maze.__main__:main"

[tool.setuptools]
packages = ["maze"]

[tool.setuptools.package-data]
maze = ["__init__.py", "*.py"]